Thu Mar 30 16:38:35 2006  Søren Sandmann  <sandmann@redhat.com>

	* src/compositor.c (meta_compositor_begin_move): Fix an illegal write.

Thu Mar 30 16:13:52 2006  Søren Sandmann  <sandmann@redhat.com>

	* composite.c: Turn wobbling back on  Add new explosion effect.

2006-03-29  Elijah Newren  <newren gmail com>

	Fix grouping in the presence of ancestors; caught by Björn.
	#336184

	* src/group.c (meta_window_compute_group): Use new
	meta_window_find_root_ancestor() function to get ancestor; for the
	computed group, use the ancestor's group instead of the ancestor
	itself

	* src/window.[ch] (meta_window_find_root_ancestor,
	meta_window_raise): split meta_window_find_root_ancestor()
	functionality of meta_window_raise() and make it available
	elsewhere

2006-03-29  Elijah Newren  <newren gmail com>

	* rationales.txt: Add bugs about pointer warping; update
	raise-on-click ones.

2006-03-29  Thomas Thurman   <thomas@thurman.org.uk>

	Abstract out the functions for setting/unsetting demands attention
	hint and avoid doing it when the window isn't obscured.  Fixes the
	remainder of #305882.

	* src/window.c, src/window.h (meta_window_set_demands_attention,
	meta_window_unset_demands_attention): new functions to mark a
	window as needing or not needing the user's attention
	* src/window.c (meta_window_show, window_activate,
	meta_window_focus, meta_window_configure_request,
	meta_window_client_message): use the new set/unset
	demands attention functions. 

2006-03-29  Björn Lindqvist  <bjourne@gmail.com>

	* src/resizepopup.c:
	* src/resizepopup.h:
	* src/window.c (meta_window_refresh_resize_popup):
	Aggregate the x, y, width and height attributes of MetaResizePopup
	to one MetaRectangle rect attribute and update code using the
	MetaResizePopup struct. Fixes #335177.

2006-03-28  Elijah Newren  <newren gmail com>

	* MAINTAINERS: New file.  #335026.  ;-)

Tue Mar 28 09:57:26 2006  Søren Sandmann  <sandmann@redhat.com>
