@@ -1,3 +1,8 @@
+Thu Mar 30 17:01:12 2006  Søren Sandmann  <sandmann@redhat.com>
+
+	* src/compositor.c (struct MetaCompositor): Fix the memory
+	corruption in a better way.
+
 Thu Mar 30 16:38:35 2006  Søren Sandmann  <sandmann@redhat.com>
 
 	* src/compositor.c (meta_compositor_begin_move): Fix an illegal write.
